# aoa

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Dockerfile  LICENSE  README-2.md  README.md  README_auth.md  README_plugin.md  ROADMAP.md  all_files.txt  code.txt  collect_docs_files.py  collect_python_files.py  commit_current.sh  coverage.json  file_list_generator.py  fix_desc_removal.py  load_env.sh  mypy.ini  pyproject.toml  requirements.txt  run_checks.sh  run_checks_with_log.sh  test_bad_code.py  to do.txt  vulture_whitelist.txt  Команды.txt  план.txt
.claude/: launch.json
.cursor/rules/: changelog-hands-off.mdc  docstring-standards.mdc  no-remove-images.mdc  readme-header.mdc
.github/workflows/: ci-push-main.yml  ci-reusable.yml  ci.yml  merge-gate.yml  pr-title-check.yml  publish-pypi.yml  publish.yml
.gitverse/workflows/: gitverse-ci.yaml
API/: ExtractorCredentialsHTTP.py  HTTPContextAssembler.py  YouTrackAPI.py  YouTrackMCPServer.py
APP/: DeleteSnapshotPostgressAction.py  FetchIssueAllActivitiesAction.py  FetchIssueStatusHistoryAction.py  FetchIssuesFromYouTrackAction.py  FindIssuesNeedingHistoryUpdateAction.py  IYouTrackIssuesSaver.py  InitDatabaseAction.py  UpdateAllIssuesHistoryAction.py  UpdateSingleIssueHistoryAction.py  YouTrackIssuesCSVSaver.py  YouTrackIssuesParser.py  YouTrackStoriyIssuesPostgresSaver.py  YouTrackStoryIssuesPostgresSaver.py  YouTrackTasksIssuesPostgresSaver.py
APP1/: InitDatabaseAction.py  YouTrackIssuesCSVSaver.py
ActionEngine/: BaseConnectionManager.py  BaseFieldChecker.py  BaseInnerTransactionAction.py  BaseResultChecker.py  BaseSimpleAction.py  BaseTransactionAction.py  BoolFieldChecker.py  CheckRoles.py  Context.py  CsvConnectionManager.py  DateFieldChecker.py  Exceptions.py  FloatFieldChecker.py  InstanceOfChecker.py  IntFieldChecker.py  PostgresConnectionManager.py  StringFieldChecker.py  TransactionContext.py  __init__.py  requires_connection_type.py
ActionEngine/Auth/: AuthCoordinator.py  ContextAssembler.py  __init__.py
ActionEngine/Checkers/: BaseFieldChecker.py  BoolFieldChecker.py  DateFieldChecker.py  FloatFieldChecker.py  InstanceOfChecker.py  IntFieldChecker.py  StringFieldChecker.py
ActionEngine/ConnectionManagers/: BaseConnectionManager.py  CsvConnectionManager.py  PostgresConnectionManager.py
ActionEngine/Context/: Context.py  EnvironmentInfo.py  RequestInfo.py  TransactionContext.py  UserInfo.py  _init_.py
ActionEngine/Core/: BaseActionMachine.py  BaseSimpleAction.py  BaseTransactionAction.py  Exceptions.py  requires_connection_type.py
ActionMachine/: __init__.py  code_ver_00.txt  code_ver_01.txt  collect_python_files.py  tests.py
ActionMachine/Auth/: AuthCoordinator.py  Authenticator.py  CheckRoles.py  ContextAssembler.py  CredentialExtractor.py  __init__.py
ActionMachine/Checkers/: BaseFieldChecker.py  BoolFieldChecker.py  DateFieldChecker.py  FloatFieldChecker.py  InstanceOfChecker.py  IntFieldChecker.py  StringFieldChecker.py
ActionMachine/Context/: Context.py  EnvironmentInfo.py  RequestInfo.py  UserInfo.py  __init__.py
ActionMachine/Core/: ActionProductMachine.py  ActionTestMachine.py  AspectMethod.py  BaseAction.py  BaseActionMachine.py  BaseParams.py  (+9 more)
App/: DeleteSnapshotPostgressAction.py  FetchIssuesFromYouTrackAction.py  InitDatabaseAction.py  YouTrackIssuesCSVSaver.py  YouTrackIssuesParser.py  YouTrackStoriyIssuesPostgresSaver.py  YouTrackTasksIssuesPostgresSaver.py  Проблемы.txt
EntryPoint/: BulkYouTrackIssueToCsvAction.py  BulkYouTrackIssueToPostgresAction.py  DeleteSnapshotServerAction.py  InitDatabaseServerAction.py  YouTrackEntryPoint.py  YouTrackMCPServer.py  __init__.py
Gateway/: BulkYouTrackIssueToCsvAction.py  BulkYouTrackIssueToPostgresAction.py  DeleteSnapshotServerAction.py  InitDatabaseServerAction.py
MCPServer/: BulkYouTrackIssueToCsvAction.py  BulkYouTrackIssueToPostgresAction.py  InitDatabaseServerAction.py  YouTrackMCPServer.py
Tests/: issue_sample.txt  test_delete_snapshot.py  test_fetch_all_activities.py  test_fetch_history.py  test_find_issues_needing_history_update.py  test_init_db.py  test_update_history.py  test_update_single_issue_history.py  test_youtrack_fetch_issue_to.py  test_youtrack_issue_to_postgres.py
Utils/: TestFetchUserStoriesAction.py  get_card_type_values.py  terst2.py  test.py  test_delete_snapshot.py  test_fetch_history.py  test_init_db.py  test_mcp.py  test_update_history.py  test_youtrack_issue_to_csv.py  test_youtrack_issue_to_postgres.py
YouTrackMCP/: BaseIssuesCSVSaver.py  BaseYouTrackIssuesSaver.py  FetchIssuesFromYouTrackAction.py  FetchIssuesToCsvAction.py  InitDatabaseAction.py  TaskItemsIssuesCSVSaver.py  UserTechStoryIssuesCSVSaver.py  YouTrackIssuesCSVSaver.py  YouTrackIssuesParser.py  YouTrackMCPServer.py  YouTrackStoriyIssuesPostgresSaver.py  YouTrackTasksIssuesPostgresSaver.py  __init__.py
aoa_run/: __init__.py
docs/: CHANGELOG.md  compensate.md  cross-cutting-logging.md  gates.md  index.md  intents-and-invariants.md  logging-architecture.md  logging-guide.md  model.md  model2.md  packages.md  plugin_event.md  step-00-get-started.md  step-01-action-and-pipeline.md  в
examples/: 01_hello_world.py  02_pipeline.py  03_logging_sensitive.py  04_saga_compensate.py  05_on_error.py  06_cache.py  07_ocel.py  08_domain_model.py  full_example.py
scripts/: check_maxitor_samples_public_api.py  check_package_boundaries.py  check_package_metadata.py  check_test_layer_imports.py  class_docstring_ai_core_only.py  commands.txt  enrich_sample_entity_fields.py  measure_full_graph_payload.py  package_boundaries.toml  pr_workflow.sh  refactor_ai_core_docstrings.py  run_checks_with_log.sh  strip_docstring_separator_blocks.py  test_layer_import_allowlist.toml  translate_tests_ru_to_en.py
src/: test_full_flow.py
tests/: __init__.py  conftest.py
tests2/: __init__.py  conftest.py
z/: Anthropic_Claude_Opus_4_6_1.txt  HexagonalArchitecture_1.txt  HexagonalArchitecture_2.txt  OpenAI_GPT_5_1.txt  deep_seek_3.txt  todo_1.txt  ИлонМаск.txt  Оценка_Anthropic: Claude Opus 4.6.txt
(+2681 files in other folders)
