# pyproject.toml — ActionMachine
# ============================================================================
# Конфигурация сборки, зависимостей, инструментов линтинга, тестирования
# и форматирования для проекта ActionMachine.
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# МЕТАДАННЫЕ
# ============================================================================
[project]
name = "action-machine"
version = "0.1.0"
description = "Intent-first business logic framework with metadata-driven actions, role-based access control, and adapter layer for FastAPI/MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ActionMachine Team" },
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "simpleeval>=1.0,<2.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
    "pylint>=3.0,<4.0",
    "vulture>=2.11,<3.0",
    "taskipy>=1.12,<2.0",
    "httpx>=0.27,<1.0",
]
all = [
    "action-machine[fastapi,mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/action-machine/action-machine"
Documentation = "https://action-machine.readthedocs.io"
Repository = "https://github.com/action-machine/action-machine"

# ============================================================================
# HATCHLING — СБОРКА
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/action_machine"]

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
# ---- ЭТАП 9: переключено с tests2 → tests после переименования ----
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["src/action_machine"]
branch = true
omit = [
    "*/testing/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
]

# ============================================================================
# PYLINT
# ============================================================================
[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
]
jobs = 0

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code
    "W0511",  # fixme
]

[tool.pylint.format]
max-line-length = 120

# ============================================================================
# RUFF
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function call in argument defaults
    "RUF012",  # mutable class variables
]

[tool.ruff.lint.isort]
known-first-party = ["action_machine"]

# ============================================================================
# BLACK
# ============================================================================
[tool.black]
line-length = 120
target-version = ["py312"]

# ============================================================================
# ISORT
# ============================================================================
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["action_machine"]
src_paths = ["src", "tests"]

# ============================================================================
# VULTURE
# ============================================================================
[tool.vulture]
paths = ["src/action_machine"]
min_confidence = 80
exclude = ["tests/"]

# ============================================================================
# TASKIPY — УДОБНЫЕ КОМАНДЫ
# ============================================================================
[tool.taskipy.tasks]
test = "pytest tests/ -v"
cov = "pytest tests/ --cov=src/action_machine --cov-report=term-missing"
lint = "ruff check src/ tests/"
fmt = "black src/ tests/ && isort src/ tests/"
types = "mypy src/action_machine"
check = "task lint && task types && task test"
dead = "vulture src/action_machine"
