# pyproject.toml — ActionMachine
# ============================================================================
# Конфигурация сборки, зависимостей, инструментов линтинга, тестирования
# и форматирования для проекта ActionMachine.
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# МЕТАДАННЫЕ
# ============================================================================
[project]
name = "aoa-run"
version = "1.0.0"
description = "aoa-run — intent-first business logic framework with metadata-driven actions, role-based access control, and adapter layer for FastAPI/MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "@Bystrov.Maxim" },
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "simpleeval>=1.0,<2.0",
    "rustworkx>=0.14,<1.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
postgres = [
    "asyncpg>=0.29,<1.0",
]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-cov>=5.0,<8.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
    "pylint>=3.0,<4.0",
    "vulture>=2.11,<3.0",
    "radon>=6.0,<7.0",
    "taskipy>=1.12,<2.0",
    "httpx>=0.27,<1.0",
]
all = [
    "aoa-run[fastapi,mcp,postgres,dev]",
]

[project.urls]
Homepage = "https://github.com/action-machine/action-machine"
Documentation = "https://action-machine.readthedocs.io"
Repository = "https://github.com/action-machine/action-machine"

# ============================================================================
# HATCHLING — СБОРКА
# ============================================================================
# Дистрибутив PyPI `aoa-run` (в имени wheel/sdist: `aoa_run-…`); код — `src/action_machine/`.
# Несколько pip-дистрибутивов с общим неймспейсом `action_machine.*` не используются.
[tool.hatch.build.targets.wheel]
packages = ["src/action_machine", "src/maxitor"]

# В sdist кладём тесты и примеры — удобно для проверки из исходников (sdist, --no-binary).
[tool.hatch.build.targets.sdist.force-include]
"tests" = "tests"
"src/examples" = "src/examples"

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# `src` — импорт `action_machine.*`; `.` — корень репо при необходимости conftest/fixtures.
pythonpath = ["src", "."]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "benchmark: performance or load regression anchors (optional selective runs)",
]

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# simpleeval — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "simpleeval.*"
ignore_missing_imports = true

# rustworkx — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "rustworkx"
ignore_missing_imports = true

# asyncpg — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

# mcp — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# examples — ослабленные проверки
[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["src/action_machine"]
branch = true
omit = [
    "*/testing/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 92
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
]

# ============================================================================
# PYLINT
# ============================================================================
[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
]
jobs = 0

[tool.pylint."messages control"]
disable = [
    # ── Документация (отключено — используем свои docstring-конвенции) ──
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring

    # ── Архитектурные решения фреймворка (осознанные) ──
    "R0401",  # cyclic-import — цепочка BaseAction ↔ gate-host inspectors разорвана ленивыми импортами; граф pylint всё равно видит цикл
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code
    "R0913",  # too-many-arguments — pipeline-методы принимают контекстные данные
    "R0917",  # too-many-positional-arguments — то же
    "R0902",  # too-many-instance-attributes — frozen dataclass с полным набором метаданных
    "R0914",  # too-many-locals — orchestration-методы с множеством шагов
    "R0904",  # too-many-public-methods — GateCoordinator — центральный API
    "R0901",  # too-many-ancestors — BaseAction наследует 6 гейт-хостов by design

    # ── Паттерн декораторов фреймворка ──
    "W0212",  # protected-access — декораторы записывают в _приватные атрибуты
    "W0511",  # fixme

    # ── ABC / исключения без тела — стандартный Python-паттерн ──
    "W0107",  # unnecessary-pass

    # ── Контракт аспектов: все 5 параметров обязательны ──
    "W0613",  # unused-argument

    # ── Транспортные слои: корректный catch Exception ──
    "W0718",  # broad-exception-caught

    # ── Стабы намеренно в PascalCase (фабрики, выглядят как конструкторы) ──
    "C0103",  # invalid-name

    # ── Line too long (контролируется ruff/black) ──
    "C0301",  # line-too-long
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "e", "f", "k", "v", "p", "R", "P", "T"]

[tool.pylint.typecheck]
# rustworkx — C-расширение, pylint не видит членов модуля (в т.ч. при `import … as rx`)
generated-members = ["rustworkx.*", "rx.*"]
# asyncpg — optional extra `[postgres]`; без установки pylint даёт E0401 import-error
ignored-modules = ["asyncpg"]

# ============================================================================
# RUFF
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
# `src`: библиотека (`action_machine`) и примеры (`examples`); плюс тесты.
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function call in argument defaults
    "RUF001",  # ambiguous unicode in strings (Cyrillic in Russian docstrings)
    "RUF002",  # ambiguous unicode in docstrings (Cyrillic in Russian docstrings)
    "RUF003",  # ambiguous unicode in comments (Cyrillic in Russian comments)
    "RUF012",  # mutable class variables
    "TC001",   # move application import into TYPE_CHECKING block
    "TC002",   # move third-party import into TYPE_CHECKING block
    "TC003",   # move standard library import into TYPE_CHECKING block
    "SIM102",  # nested if → combined if (less readable for complex conditions)
    "SIM103",  # return condition directly (less explicit)
    "SIM105",  # try/except/pass → contextlib.suppress (loses comment)
    "SIM108",  # if/else → ternary (less readable with type:ignore comments)
    "SIM110",  # for loop → any() (less readable for some patterns)
]

[tool.ruff.lint.per-file-ignores]
"src/action_machine/testing/stubs.py" = ["N802"]
"src/action_machine/intents/checkers/__init__.py" = ["RUF022"]
# Ленивый импорт ``CoreActionMachine`` внутри ``__getattr__`` — не поднимать наверх.
"src/action_machine/runtime/__init__.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["action_machine"]

# ============================================================================
# BLACK
# ============================================================================
[tool.black]
line-length = 120
target-version = ["py312"]

# ============================================================================
# ISORT
# ============================================================================
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["action_machine"]
# Единый корень `src`: библиотека и примеры переживают git mv без смены этого списка.
src_paths = ["src", "tests"]

# ============================================================================
# VULTURE
# ============================================================================
[tool.vulture]
paths = ["src/action_machine"]
min_confidence = 80
exclude = ["tests/"]

# ============================================================================
# TASKIPY — УДОБНЫЕ КОМАНДЫ
# ============================================================================
[tool.taskipy.tasks]
test = "pytest tests/ -v"
cov = "pytest tests/ --cov=src/action_machine --cov-report=term-missing"
# Линт по `src/` (библиотека и примеры) и `tests/`.
lint = "ruff check src/ tests/ scripts/"
fmt = "black src/ tests/ && isort src/ tests/"
# Строгая проверка пакета; полное дерево `src/` — `task typecheck`.
types = "mypy src/action_machine"
test-layer-imports = "python scripts/check_test_layer_imports.py"
check = "task lint && task types && task test-layer-imports && task test"
dead = "vulture src/action_machine"
typecheck = "mypy src/"
pylint = "pylint src/"
cc = "radon cc src/ -a -nb"
mi = "radon mi src/ -nb"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
