# pyproject.toml — ActionMachine
# ============================================================================
# Конфигурация сборки, зависимостей, инструментов линтинга, тестирования
# и форматирования для проекта ActionMachine.
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# МЕТАДАННЫЕ
# ============================================================================
[project]
name = "aoa-run"
version = "1.0.0"
description = "aoa-run — intent-first business logic framework with metadata-driven actions, role-based access control, and adapter layer for FastAPI/MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "@Bystrov.Maxim" },
]

dependencies = [
    "aoa-graph",
    "aoa-action-machine",
    "aoa-maxitor",
    "aoa-examples",
]

[project.optional-dependencies]
fastapi = [
    "aoa-action-machine[fastapi]",
    "aoa-examples[fastapi]",
]
mcp = [
    "aoa-action-machine[mcp]",
    "aoa-examples[mcp]",
]
postgres = [
    "aoa-action-machine[postgres]",
]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-cov>=5.0,<8.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
    "pylint>=3.0,<4.0",
    "vulture>=2.11,<3.0",
    "radon>=6.0,<7.0",
    "taskipy>=1.12,<2.0",
    "httpx>=0.27,<1.0",
    "aoa-action-machine[fastapi,mcp,postgres]",
    "aoa-examples[fastapi,mcp]",
]
all = [
    "aoa-run[fastapi,mcp,postgres,dev]",
]

[project.urls]
Homepage = "https://github.com/action-machine/action-machine"
Documentation = "https://action-machine.readthedocs.io"
Repository = "https://github.com/action-machine/action-machine"

# ============================================================================
# UV WORKSPACE — publishable members under ``packages/``
# ============================================================================
[tool.uv.workspace]
members = [
    "packages/aoa-graph",
    "packages/aoa-action-machine",
    "packages/aoa-maxitor",
    "packages/aoa-examples",
]

# Map distribution names used in member ``dependencies`` to workspace paths.
[tool.uv.sources]
aoa-graph = { workspace = true }
aoa-action-machine = { workspace = true }
aoa-maxitor = { workspace = true }
aoa-examples = { workspace = true }

# ============================================================================
# HATCHLING — meta wheel ``aoa-run`` (workspace root; ``aoa.*`` live in member packages)
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["aoa_run"]

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Четыре `…/src` на PYTHONPATH для неймспейса `aoa.*`; `.` — корень репо (conftest/fixtures).
pythonpath = [
    "packages/aoa-graph/src",
    "packages/aoa-action-machine/src",
    "packages/aoa-maxitor/src",
    "packages/aoa-examples/src",
    ".",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "benchmark: performance or load regression anchors (optional selective runs)",
    "graph_coverage: logical graph matrix (plan 009); run with pytest -m graph_coverage",
    "facet_skeleton: tests that assert facet skeleton shape via facet_topology_copy (optional CI subset)",
]

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "packages/aoa-graph/src:packages/aoa-action-machine/src:packages/aoa-maxitor/src:packages/aoa-examples/src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# simpleeval — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "simpleeval.*"
ignore_missing_imports = true

# rustworkx — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "rustworkx"
ignore_missing_imports = true

# asyncpg — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

# mcp — нет py.typed / стабов
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# examples — ослабленные проверки
[[tool.mypy.overrides]]
module = "aoa.examples.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# maxitor samples — stacked decorators без py.typed на декораторах
[[tool.mypy.overrides]]
module = "aoa.maxitor.samples.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.scenarios.domain_model.*"
disallow_untyped_decorators = false
disable_error_code = ["type-arg", "arg-type"]

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["packages/aoa-action-machine/src/aoa/action_machine"]
branch = true
omit = [
    "*/testing/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
]

# ============================================================================
# PYLINT
# ============================================================================
[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
]
jobs = 0

[tool.pylint."messages control"]
disable = [
    # ── Документация (отключено — используем свои docstring-конвенции) ──
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring

    # ── Архитектурные решения фреймворка (осознанные) ──
    "R0401",  # cyclic-import — цепочка BaseAction ↔ gate-host inspectors разорвана ленивыми импортами; граф pylint всё равно видит цикл
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code
    "R0913",  # too-many-arguments — pipeline-методы принимают контекстные данные
    "R0917",  # too-many-positional-arguments — то же
    "R0902",  # too-many-instance-attributes — frozen dataclass с полным набором метаданных
    "R0914",  # too-many-locals — orchestration-методы с множеством шагов
    "R0904",  # too-many-public-methods — GateCoordinator — центральный API
    "R0901",  # too-many-ancestors — BaseAction наследует 6 гейт-хостов by design

    # ── Паттерн декораторов фреймворка ──
    "W0212",  # protected-access — декораторы записывают в _приватные атрибуты
    "W0511",  # fixme

    # ── ABC / исключения без тела — стандартный Python-паттерн ──
    "W0107",  # unnecessary-pass

    # ── Контракт аспектов: все 5 параметров обязательны ──
    "W0613",  # unused-argument

    # ── Транспортные слои: корректный catch Exception ──
    "W0718",  # broad-exception-caught

    # ── Стабы намеренно в PascalCase (фабрики, выглядят как конструкторы) ──
    "C0103",  # invalid-name

    # ── Line too long (контролируется ruff/black) ──
    "C0301",  # line-too-long
]

[tool.pylint.format]
max-line-length = 120
# GateCoordinator / HTML visualizer remain intentionally large single modules.
max-module-lines = 1500

[tool.pylint.basic]
good-names = ["i", "e", "f", "k", "v", "p", "R", "P", "T"]

[tool.pylint.typecheck]
# rustworkx — C-расширение, pylint не видит членов модуля (в т.ч. при `import … as rx`)
generated-members = ["rustworkx.*", "rx.*"]
# asyncpg — optional extra `[postgres]`; без установки pylint даёт E0401 import-error
ignored-modules = ["asyncpg"]

# ============================================================================
# RUFF
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
# `packages/` — исходники `aoa.*`; плюс тесты, скрипты и meta-package ``aoa_run``.
src = ["packages", "tests", "scripts", "aoa_run"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function call in argument defaults
    "RUF001",  # ambiguous unicode in strings (Cyrillic in Russian docstrings)
    "RUF002",  # ambiguous unicode in docstrings (Cyrillic in Russian docstrings)
    "RUF003",  # ambiguous unicode in comments (Cyrillic in Russian comments)
    "RUF012",  # mutable class variables
    "TC001",   # move application import into TYPE_CHECKING block
    "TC002",   # move third-party import into TYPE_CHECKING block
    "TC003",   # move standard library import into TYPE_CHECKING block
    "SIM102",  # nested if → combined if (less readable for complex conditions)
    "SIM103",  # return condition directly (less explicit)
    "SIM105",  # try/except/pass → contextlib.suppress (loses comment)
    "SIM108",  # if/else → ternary (less readable with type:ignore comments)
    "SIM110",  # for loop → any() (less readable for some patterns)
]

[tool.ruff.lint.per-file-ignores]
"packages/aoa-action-machine/src/aoa/action_machine/testing/stubs.py" = ["N802"]
"packages/aoa-action-machine/src/aoa/action_machine/intents/checkers/__init__.py" = ["RUF022"]
# ``runtime/__init__.py`` — stdlib import block only; isort order is intentional.
# Отложенные импорты после ``BaseAction`` — отдельный блок (см. комментарий в файле).
"packages/aoa-action-machine/src/aoa/action_machine/model/base_action.py" = ["I001"]
"packages/aoa-examples/src/aoa/examples/fastapi_mcp_services/app_fastapi_service.py" = ["E402"]
"packages/aoa-examples/src/aoa/examples/fastapi_mcp_services/app_mcp_service.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["aoa"]

# ============================================================================
# BLACK
# ============================================================================
[tool.black]
line-length = 120
target-version = ["py312"]

# ============================================================================
# ISORT
# ============================================================================
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["aoa"]
# Единый корень `packages/`: исходники `aoa.*`, meta ``aoa_run``, тесты.
src_paths = ["packages", "aoa_run", "tests"]

# ============================================================================
# VULTURE
# ============================================================================
[tool.vulture]
paths = ["packages/aoa-action-machine/src/aoa/action_machine"]
min_confidence = 80
exclude = ["tests/"]

# ============================================================================
# TASKIPY — УДОБНЫЕ КОМАНДЫ
# ============================================================================
[tool.taskipy.tasks]
test = "pytest tests/ --ignore=tests/packaging -v"
packaging-smoke = "pytest tests/packaging -v"
build-packages = "uv run --group dev python -m build packages/aoa-graph && uv run --group dev python -m build packages/aoa-action-machine && uv run --group dev python -m build packages/aoa-maxitor && uv run --group dev python -m build packages/aoa-examples"
cov = "pytest tests/ --ignore=tests/packaging --cov=packages/aoa-action-machine/src/aoa/action_machine --cov-report=term-missing"
# Lint sources under packages/, tests/, scripts/, and the root meta package ``aoa_run``.
lint = "ruff check packages/ tests/ scripts/ aoa_run/"
fmt = "black packages/ tests/ aoa_run/ && isort packages/ tests/ aoa_run/"
# Narrow mypy pass on action_machine; full tree: ``task typecheck``.
types = "mypy packages/aoa-action-machine/src"
test-layer-imports = "python scripts/check_test_layer_imports.py"
samples-public-api = "python scripts/check_maxitor_samples_public_api.py"
package-boundaries = "python scripts/check_package_boundaries.py"
package-boundaries-tests = "python scripts/check_package_boundaries.py --tests"
package-metadata = "python scripts/check_package_metadata.py"
check = "task lint && task types && task package-boundaries && task package-boundaries-tests && task package-metadata && task build-packages && task packaging-smoke && task test-layer-imports && task samples-public-api && task test"
dead = "vulture packages/aoa-action-machine/src/aoa/action_machine"
typecheck = "mypy packages/"
pylint = "pylint packages/"
cc = "radon cc packages/ -a -nb"
mi = "radon mi packages/ -nb"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
